deploy/base/openehr-nodes/envida/etl-zib-rest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envida-etl-zib-rest
  namespace: dh-health
  labels:
    app: envida-etl-zib-rest
    ehr-node-name: envida
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envida-etl-zib-rest
  template:
    metadata:
      labels:
        app: envida-etl-zib-rest
    spec:
      containers:
      - name: envida-etl-zib-rest
        image: registry.prod.dh.unimaas.nl/docker-health/etl-zib-rest:latest
        volumeMounts:
        - name: outputs
          mountPath: /code/outputs
          subPath: envida/rest
        - name: etl-logs
          mountPath: /code/logs/envida
          subPath: envida/rest
      volumes:
      - name: outputs
        persistentVolumeClaim:
          claimName: output-pvc
      - name: etl-logs
        persistentVolumeClaim:
          claimName: log-pvc
